--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>card game</title>
-    </head>
-    <body>
-        <div class="main">
-            <canvas id="Layer1" style="background-color:black;">
-            </canvas>
-        </div>
-    </body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>card game</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="./MainController.js"></script>
+  </head>
+  <body>
+    <div class="main">
+      <canvas id="Layer1">
+      </canvas>
+      <canvas id="Layer2">
+      </canvas>
+    </div>
+  </body>
 </html>
