モジュール化動作確認

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>card game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="./MainController.js"></script>
+    <script src="./MainController.js" type="module"></script>
   </head>
   <body>
     <div class="main">
