--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   </head>
   <body>
     <div class="main">
-      <canvas id="Layer1">
+      <canvas id="InfoLayer">
       </canvas>
-      <canvas id="Layer2">
+      <canvas id="PlayerLayer">
+      </canvas>
+      <canvas id="EnemyLayer">
+      </canvas>
+      <canvas id="CursorLayer">
       </canvas>
     </div>
   </body>
