--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>card game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="importmap">
+      {
+        "imports":{
+          "howler":"./node_modules/howler/dist/howler.js"
+        }
+      }
+    </script>
     <script src="./MainController.js" type="module"></script>
   </head>
   <body>
